--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -1,3 +1,11 @@
 .header {
-  background: #333;
+  background: var(--gray-800);
+  display: flex;
+  justify-content: center;
+  padding: 1.25rem 0;
 }
+
+.header img {
+  height: 7rem;
+}
+
