--- a/src/components/Sidebar.module.css
+++ b/src/components/Sidebar.module.css
@@ -16,11 +16,24 @@
   align-items: center;
 }
 
+.profile strong {
+  margin-top: 1rem;
+  color: var(--gray-100);
+  line-height: 1.6;
+}
+
+.profile span {
+  font-size: 0.875rem;
+  color: var(--gray-400);
+  line-height: 1.6;
+}
+
 .sidebar footer {
   border-top: 1px solid var(--gray-600);
   margin-top: 1.6rem;
   padding: 1.5rem 2rem 2rem;
 }
+
 
 .sidebar footer a {
   width: 100%;
@@ -37,4 +50,13 @@
   display: flex;
   align-items: center;
   justify-content: center;
+
+  gap: 0.5rem;
+
+  transition: color 0.1s, backgroung-color 0.2s;
+}
+
+.sidebar footer a:hover {
+  background: var(--green-500);
+  color: var(--white)
 }
