--- a/src/components/Avatar.module.css
+++ b/src/components/Avatar.module.css
@@ -2,7 +2,12 @@
   width: calc(3rem + 12px);
   height: calc(3rem + 12px);
   border-radius: 8px;
+}
+
+.avatarWithBorder {
+  width: calc(3rem + 12px);
+  height: calc(3rem + 12px);
+  border-radius: 8px;
   border: 4px solid var(--gray-800);
-  margin-top: calc(0px - 1.5rem - 6px);
   outline: 2px solid var(--green-500);
 }
